# ohmyzsh

./: .env.example  .envrc  .gitignore  AGENTS.md  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.devcontainer/features/oasis-core/: devcontainer-feature.json  install.sh
.devcontainer/features/quad9-dns/: devcontainer-feature.json  install.sh
core/vcs/: Cargo.toml  README.md
core/vcs/src/: block_cache.rs  jj_bridge.rs  lib.rs  submodules.rs  web.rs  workflow.rs
docs/: FOUNDATIONS.md
docs/lua/: iso_compliance.lua
docs/specs/: open-compute-schema.json  open-compute.md
modules/ci/checks/: README.md
modules/ci/github-actions/: README.md
modules/docs/architecture/: README.md
modules/docs/deployment/: README.md
modules/docs/security/: README.md
modules/docs/specs/: did-handles.md
modules/infra/dns/: README.md
modules/infra/foundationdb/: README.md
modules/infra/ipv6/: README.md
modules/infra/postgres/: README.md
modules/infra/secrets/: README.md
modules/legacy/: README.md
modules/orchestration/coder/: README.md  main.tf
modules/orchestration/homestar/: README.md
modules/orchestration/ipfs/: README.md
modules/orchestration/opendeepwiki/: README.md
modules/orchestration/podman/: podman-compose.yml
modules/orchestration/ray/: README.md
modules/scm/gitoxide/: README.md
modules/scm/gogs/: Dockerfile.gogs  README.md
modules/scm/luci-vcs/: Cargo.toml
modules/scm/luci-vcs/src/: block_cache.rs  handle.rs
modules/shell/: README.md
modules/web/luci-frontend/src/: styles.css
modules/web/luci-frontend/src/components/: Header.tsx  SentropyMeter.tsx  TierMatrix.tsx
modules/web/luci-frontend/src/functions/: luciverse.ts  sentropy.ts
modules/web/luci-frontend/src/lib/: non-terms-content.ts  sentropy.ts
modules/web/luci-frontend/src/routes/: agents.tsx  compliance.tsx  mission-control.tsx  non-terms.tsx
orchestration/lds_lineage/networking/: luciverse_dns.lua
orchestration/lds_lineage/scm/: Caddyfile  Dockerfile.builder  README.md  gitweb.conf  podman-compose.yml
orchestration/lds_lineage/scm/coder-template/: Dockerfile.workspace
src/: routeTree.gen.ts  styles.css
src/components/: AgentChatPanel.tsx  GenesisBondCard.tsx  Header.tsx  ModuleGrid.tsx  SignalFeed.tsx
src/functions/: compliance.ts
src/lib/: iso-compliance.ts  luci-clock.ts  luciverse.ts
src/routes/: index.tsx  signal.tsx
src/routes/api/signal/: stream.ts
