[package]
name = "luci-vcs"
version = "0.1.0"
edition = "2021"
authors = ["daryl@luci.digital"]
description = "Veritas-tuned VCS substrate for LuciVerse — LDS 700.528 @ 528 Hz"
license = "MIT OR Apache-2.0"

# LDS: 700.528 | IPv6: 2602:F674:0000:0700::528 | Genesis Bond: ACTIVE @ 741 Hz

[lib]
name = "luci_vcs"
path = "src/lib.rs"

[dependencies]
# Core git engine — pure Rust, async-aware
gix = { version = "0.66", features = ["async-network-client", "blocking-network-client", "max-performance"] }

# Progress + tracing for long-running ops (clone, pack, fetch)
prodash = { version = "29", features = ["render-line", "render-tui", "progress-tree"] }

# Async runtime (tokio-rs ecosystem)
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# ── XET content-addressable storage (xet-core, Apache-2.0) ───────────────────
# Replaces hand-rolled block_cache — production CDC chunking + MerkleHash CAS.
# Ref: https://github.com/huggingface/xet-core
# xet-data owns chunking/dedup; xet-client owns the HTTP CAS backend.
xet-data = { git = "https://github.com/huggingface/xet-core", optional = true }
xet-client = { git = "https://github.com/huggingface/xet-core", optional = true }

# ── IPFS / IPLD ───────────────────────────────────────────────────────────────
# CID for content-addressing blocks (wraps any multihash as an IPFS CID).
# libipld for IPLD DAG codec (DAG-CBOR, DAG-JSON).
cid = { version = "0.11", optional = true }
libipld = { version = "0.16", optional = true }

# ── IPVM Workflow ─────────────────────────────────────────────────────────────
# Agent task DAGs: each task has CID-addressed inputs → reproducible, auditable.
# Ref: https://github.com/ipvm-wg/workflow
homestar-workflow = { version = "0.3", optional = true }
homestar-invocation = { version = "0.3", optional = true }  # UCAN auth

# ── Fallback CAS (used when xet feature is off) ───────────────────────────────
blake3 = "1.5"        # CAS hashing — 256-bit, parallel
zstd = "0.13"         # Block compression
memmap2 = "0.9"       # mmap for cold blocks

# Tracing / observability — tokio.rs/tokio/topics/tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
hex = "0.4"

# IPv6 address parsing for the sovereign schema
ipnet = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }

[[bin]]
name = "luci-vcs"
path = "src/bin/main.rs"

[features]
default = ["block-cache", "jj-bridge", "gitweb"]
block-cache = []
jj-bridge = []
gitweb = []
# Enable xet-core backed CAS (production chunking + MerkleHash)
xet = ["dep:xet-data", "dep:xet-client"]
# Enable IPFS/IPLD block addressing (CID output from block_cache)
ipfs = ["dep:cid", "dep:libipld"]
# Enable IPVM agent workflow generation (requires ipfs)
ipvm = ["dep:homestar-workflow", "dep:homestar-invocation", "ipfs"]
